--- a/angular.json
+++ b/angular.json
@@ -23,13 +23,6 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "aot": true,
-            "allowedCommonJsDependencies": [
-              "rxjs/Subject",
-              "firebase",
-              "@firebase/app",
-              "@firebase/auth",
-              "@firebase/firestore"
-            ],
             "assets": [
               "src/favicon.ico",
               "src/assets"
@@ -38,7 +31,13 @@
               "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "allowedCommonJsDependencies": [
+              "firebase",
+              "@firebase/app",
+              "@firebase/auth",
+              "@firebase/firestore"
+            ]
           },
           "configurations": {
             "production": {
@@ -130,6 +129,10 @@
               "devServerTarget": "fitness-tracker:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
     }
